opam-version: "2.0"
maintainer: "mickael.delahaye@gmail.com"
version: "0.7.2"
authors: ["Mickaël Delahaye"]
license: "ISC"
build: [
  ["./configure"]
  [make "all"]
]
remove: [["ocamlfind" "remove" "ocamlyices"]]
depends: ["ocaml" {>= "4.06"} "ocamlfind" "camlidl" "num" {>= "1"}]
x-ci-accept-failures: ["debian-unstable"]
dev-repo: "git+https://github.com/polazarus/ocamlyices"
install: [make "install"]
synopsis: "Yices SMT solver binding"
description: """
Yices is a Satisfiability Modulo Theories (SMT) solver from SRI.
This binding requires Yices version 1.0.34 or more recent, but not 2.

Download the latest tarball from Yices' official website:
  http://yices.csl.sri.com/download.shtml
Install it in  /usr/local  and register the DLL quickly:
  wget -q -O- http://git.io/sWxMmg | sh -s <yices-XYZ.tar.gz>
where <yices-XYZ.tar.gz> should be replaced with the path to the
downloaded tarball. Optionally you can set an installation directory:
  wget -q -O- http://git.io/sWxMmg | sh -s <yices-XYZ.tar.gz> /opt /opt/lib64"""
flags: light-uninstall